--- a/project1.html
+++ b/project1.html
@@ -82,9 +82,12 @@ body {
   @media only screen and (max-width:620px) {
   /* For nav,header,section,article,footer: */
   .icon-bar{
-    width: 20%;
-    padding: 0px;
-  }
+    width:100%;
+    
+	  }
+	  .icon-bar a{
+	  width:100%
+	  }
   .slideshow-container {
     width: 100%;
   }
